Updated the database

--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,9 @@ services:
   - type: web
     name: ssn-hall-booking
     env: python
+    plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: cd backend && gunicorn wsgi:app
+    startCommand: cd backend && python seed_data.py && gunicorn wsgi:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.0
@@ -18,3 +19,4 @@ databases:
   - name: ssn-hall-db
     databaseName: seminar_hall_db
     user: ssn_user
+    plan: free
